--- a/www/css/contactsContainer.css
+++ b/www/css/contactsContainer.css
@@ -1,5 +1,11 @@
 .container{
-    height: 80vh;
-    width: 80vw;
-    background-color: aqua;
+    height: 100vh;
+    width: 100vw;
+}
+
+main:not(.contact) .container {
+    display: none;
+}
+main:not(.editContact) .editContainer {
+    display: none;
 }
