--- a/www/css/contactsContainer.css
+++ b/www/css/contactsContainer.css
@@ -2,6 +2,13 @@
     height: 100vh;
     width: 100vw;
 }
+.editContainer{
+    height: 100vh;
+    width: 100vw;
+}
+.hidden{
+    display: none;
+}
 
 main:not(.contact) .container {
     display: none;
