--- a/www/css/contactsContainer.css
+++ b/www/css/contactsContainer.css
@@ -16,6 +16,9 @@ main:not(.contact) .container {
 main:not(.editContact) .editContainer {
     display: none;
 }
+main:not(.editContact) .inputFields {
+    display: none;
+}
 
 .container {
     display: none
@@ -23,10 +26,29 @@ main:not(.editContact) .editContainer {
 .editContainer {
     display: none
 }
+.inputFields{
+    display: none
+}
 
+main.contact .inputFields {
+    display: block;
+}
 main.contact .container {
     display: block;
 }
 main.editContact .editContainer {
     display: block;
 }
+main {
+    text-align: center;
+}
+input{
+    width: 80%;
+}
+.createContactSubmitBtn{
+    width: 30%;
+}
+.editContactSubmitBtn{
+    width: 30%
+}
+
